加载调试完成

--- a/node_js/web_resources/index.html
+++ b/node_js/web_resources/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" href="./resource/icon/mango16.png" />
+<link rel="shortcut icon" href="./img/icon/nodeJs.png" />
 <title>NodeJs Demo</title>
 </head>
 <body>
 	<div>1231256</div>
 	<script type="text/javascript"
 		src="js/libs/jquery/jquery.min.1.10.2.js"></script>
-		<script type="text/javascript" src = "js/init.js"></script>
+		<script type="text/javascript" src = "js/index.js"></script>
 </body>
 </html>
