已经可以加载图片

--- a/node_js/web_resources/index.html
+++ b/node_js/web_resources/index.html
@@ -2,12 +2,19 @@
 <html>
 <head>
 <link rel="shortcut icon" href="./img/icon/nodeJs.png" />
+<link rel="stylesheet" href="./css/index.css" />
 <title>NodeJs Demo</title>
 </head>
 <body>
-	<div>1231256</div>
+	<ul>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
 	<script type="text/javascript"
 		src="js/libs/jquery/jquery.min.1.10.2.js"></script>
-		<script type="text/javascript" src = "js/index.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
